[Enc] Provide C only libenc_sunec.a on demand
Summary: The library libsunec.a provided by Graal VM has C++ symbols which
are not supported by OE SDK. So we compile a C symbol only
libenc_sunec.a library for Enclave usages on demand.

Test Plan: all tests pass

Reviewers: lei.yul, jeffery.wsj, sanhong.lsh

Issue: https://aone.alibaba-inc.com/task/41832504

CR:
https://code.aone.alibaba-inc.com/java-tee/JavaEnclave/codereview/8856699